--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import Document from '~/layout/Document.astro'
+import Blog from '~/layout/Blog.astro'
 ---
 
-<Document title="Patchouli">
+<Blog title="Patchouli">
   <p>
     The shrine isn't a good place for using magic. <br />
     It needs someplace more ominous.
   </p>
-</Document>
+</Blog>
