fix: rename layouts dir

--- a/src/pages/chronicles/[...slug].astro
+++ b/src/pages/chronicles/[...slug].astro
@@ -3,7 +3,7 @@ import type { GetStaticPaths } from 'astro'
 import { CollectionEntry } from 'astro:content'
 import { getCollection } from 'astro:content'
 import CloudinaryImage from '~/components/CloudinaryImage.astro'
-import Blog from '~/layout/Blog.astro'
+import Blog from '~/layouts/Blog.astro'
 import * as R from 'remeda'
 
 interface Props {
