--- a/src/pages/chronicles/index.astro
+++ b/src/pages/chronicles/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content'
-import Blog from '~/layout/Blog.astro'
+import Blog from '~/layouts/Blog.astro'
 import * as R from 'remeda'
 import CloudinaryImage from '~/components/CloudinaryImage.astro'
 
