feat: update styles

--- a/src/components/CloudinaryImage.astro
+++ b/src/components/CloudinaryImage.astro
@@ -17,8 +17,14 @@ const src = cld.image(Astro.props.src).createCloudinaryURL()
 </figure>
 
 <style>
+  figure {
+    display: flex;
+    justify-content: center;
+  }
+
   img {
     max-width: 100%;
     height: auto;
+    border-radius: 10px;
   }
 </style>
