--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -14,7 +14,7 @@ import Document from './Document.astro'
   </div>
 
   <div class="layout-container">
-    <span class="content-wrapper"><slot /></span>
+    <article class="content-wrapper"><slot /></article>
   </div>
 </Document>
 
@@ -57,11 +57,17 @@ import Document from './Document.astro'
     h1 {
       font-size: 2em;
     }
+
     :is(h2, h3, h4, h5, h6) {
       padding: 1em 0 0.5em;
     }
 
     p {
+      margin-top: 1em;
+    }
+
+    pre {
+      padding: 1em;
       margin-top: 1em;
     }
 
