feat(styles): css padding

--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -74,5 +74,9 @@ import Document from './Document.astro'
     ul {
       list-style-position: inside;
     }
+
+    img {
+      padding: 1em 0;
+    }
   }
 </style>
