feat: blog entries

--- a/src/pages/chronicles/index.astro
+++ b/src/pages/chronicles/index.astro
@@ -2,30 +2,25 @@
 import { getCollection } from 'astro:content'
 import Blog from '~/layouts/Blog.astro'
 import * as R from 'remeda'
-import CloudinaryImage from '~/components/CloudinaryImage.astro'
+import EntryCard from '~/components/EntryCard.astro'
 
-const chronicles = await getCollection('chronicles')
+const chronicles = R.pipe(
+  await getCollection('chronicles'),
+  R.sort((prev, self) => prev.data.date.getDate() + self.data.date.getDate()),
+  R.reverse()
+)
 ---
 
 <Blog>
   <ul>
     {
-      R.map(chronicles, c => (
-        <a href={`/chronicles/${c.slug}`}>
-          <li class="entry-container">
-            {c.data.image && (
-              <CloudinaryImage
-                src={c.data.image}
-                alt={c.data.title}
-                inferSize
-              />
-            )}
-
-            <div style={{ padding: '1em' }}>
-              <h4>{c.data.title}</h4>
-              <span>{c.data.description}</span>
-            </div>
-          </li>
+      chronicles.map(({ slug, data }, index) => (
+        <a class={index === 0 ? 'span-2' : null} href={`/chronicles/${slug}`}>
+          <EntryCard
+            image={data.image}
+            title={data.title}
+            description={data.description}
+          />
         </a>
       ))
     }
@@ -35,10 +30,10 @@ const chronicles = await getCollection('chronicles')
 <style>
   ul {
     display: grid;
-    gap: 1em;
     justify-content: center;
     list-style: none;
     margin-top: 2em;
+    gap: 1em;
   }
 
   a {
@@ -46,11 +41,9 @@ const chronicles = await getCollection('chronicles')
     text-decoration: none;
   }
 
-  .entry-container {
-    max-width: 400px;
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: oklch(20.11% 0.004 286.04);
-    box-shadow: 0 0 0 1px oklch(26.45% 0.01 268.31);
+  @media (width >= 700px) {
+    .span-2 {
+      grid-column: span 2 / span 2;
+    }
   }
 </style>
