--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,7 @@ import Blog from '~/layouts/Blog.astro'
         ReactJs and SolidJS.
       </p>
     </section>
-    <Image
-      src="type-moon_fate_extra_ccc_hhpcvm"
-      alt=""
-      width="300"
-      inferSize
-    />
+    <Image src="type-moon_fate_extra_ccc_hhpcvm" alt="" />
   </div>
 </Blog>
 
