--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,31 @@
 ---
 import Image from '~/components/CloudinaryImage.astro'
-import Blog from '~/layouts/Blog.astro'
+import ContentWrapper from '~/components/ContentWrapper.astro'
+import BaseLayout from '~/layouts/BaseLayout.astro'
 ---
 
-<Blog>
-  <div class="grid">
-    <section>
-      <p>
-        "The shrine isn't a good place for using magic. It needs someplace more
-        ominous."
-      </p>
-      <p>
-        My experience across a broad range of technologies, but I'm focusing on
-        ReactJs and SolidJS.
-      </p>
-    </section>
-    <Image src="type-moon_fate_extra_ccc_hhpcvm" alt="" />
-  </div>
-</Blog>
+<BaseLayout>
+  <ContentWrapper>
+    <div class="grid">
+      <section>
+        <p>
+          "The shrine isn't a good place for using magic. It needs someplace
+          more ominous."
+        </p>
+        <p>
+          My experience across a broad range of technologies, but I'm focusing
+          on ReactJs and SolidJS.
+        </p>
+      </section>
+      <Image src="type-moon_fate_extra_ccc_hhpcvm" alt="" />
+    </div>
+  </ContentWrapper>
 
-<style>
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-  }
-</style>
+  <style>
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+  </style>
+</BaseLayout>
