feat: rename for consistency

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ interface Props {
 
 const links = [
   { text: 'About', href: 'about' },
-  { text: 'Blog', href: 'chronicles' }
+  { text: 'Chronicle', href: 'chronicles' }
 ]
 
 const { title, description } = Astro.props
