--- a/src/pages/chronicles/index.astro
+++ b/src/pages/chronicles/index.astro
@@ -17,7 +17,10 @@ const chronicles = R.pipe(
   <ul>
     {
       chronicles.map(({ slug, data }, index) => (
-        <a class={index === 0 ? 'span-2' : null} href={`/chronicles/${slug}`}>
+        <a
+          class={index === 0 ? 'span-2' : null}
+          href={`${import.meta.env.BASE_URL}/chronicles/${slug}`}
+        >
           <EntryCard
             image={data.image}
             title={data.title}
