--- a/src/components/Document/DocumentHead.astro
+++ b/src/components/Document/DocumentHead.astro
@@ -7,6 +7,7 @@ interface Props {
   description?: string
 }
 
+const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 const { title = 'Patchouli', description } = Astro.props
 ---
 
@@ -15,6 +16,7 @@ const { title = 'Patchouli', description } = Astro.props
   <meta name="viewport" content="width=device-width" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="generator" content={Astro.generator} />
+  <link rel="canonical" href={canonicalURL} />
   <meta name="description" content={description} />
   <meta name="title" content={title} />
   <title>{title}</title>
@@ -24,12 +26,12 @@ const { title = 'Patchouli', description } = Astro.props
     rel="preload"
     href="/fonts/GeistVF.woff2"
     as="font"
-    type="font/woff2"
+    type={`${import.meta.env.BASE_URL}/font/woff2`}
     crossorigin
   />
   <link
     rel="preload"
-    href="/fonts/GeistMonoVF.woff2"
+    href={`${import.meta.env.BASE_URL}/fonts/GeistMonoVF.woff2`}
     as="font"
     type="font/woff2"
     crossorigin
