--- a/src/components/Document/DocumentHead.astro
+++ b/src/components/Document/DocumentHead.astro
@@ -28,9 +28,9 @@ const { title = 'Patchouli', description } = Astro.props
   <!-- Fonts -->
   <link
     rel="preload"
-    href="/fonts/GeistVF.woff2"
+    href={`${import.meta.env.BASE_URL}/fonts/GeistVF.woff2`}
     as="font"
-    type={`${import.meta.env.BASE_URL}/font/woff2`}
+    type="font/woff2"
     crossorigin
   />
   <link
