--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,6 +37,7 @@ const { routes } = Astro.props
     top: 0px;
     margin-bottom: 1em;
     box-shadow: 0 1px oklch(26.45% 0.01 268.31);
+    z-index: 99;
   }
 
   a {
@@ -68,7 +69,7 @@ const { routes } = Astro.props
   .container-center {
     padding: 0 1em;
     margin: auto;
-    max-width: 42em;
+    max-width: var(--page-width);
   }
 
   .header-body {
