feat: multiple-page layout.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const { title, description } = Astro.props
       .layout-container {
         padding-left: 1em;
         padding-right: 1em;
-        max-width: 42em;
+        max-width: var(--page-width);
         margin: auto;
       }
     </style>
