--- a/src/layouts/ChronicleLayout.astro
+++ b/src/layouts/ChronicleLayout.astro
@@ -11,5 +11,14 @@ const { title, description } = Astro.props
 ---
 
 <BaseLayout {title} {description}>
-  <ContentWrapper><slot /></ContentWrapper>
+  <div class="chronicles-container">
+    <ContentWrapper><slot /></ContentWrapper>
+  </div>
 </BaseLayout>
+
+<style>
+  .chronicles-container {
+    max-width: 40em;
+    margin: auto;
+  }
+</style>
