--- a/src/components/EntryCard.astro
+++ b/src/components/EntryCard.astro
@@ -5,26 +5,37 @@ interface Props {
   image?: string
   title: string
   description: string
+  href: string
 }
 
-const { image, title, description } = Astro.props
+const { image, title, description, href } = Astro.props
 ---
 
-<li class="container">
+<a class="entry-card" {href}>
   {image && <CloudinaryImage src={image} alt={title} />}
 
   <div style={{ padding: '1em' }}>
     <h4>{title}</h4>
     <span>{description}</span>
   </div>
-</li>
+</a>
 
 <style>
-  .container {
-    width: 100%;
-    border-radius: 10px;
-    overflow: hidden;
+  a {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .entry-card {
+    height: 100%;
     background-color: oklch(20.11% 0.004 286.04);
     box-shadow: 0 0 0 1px oklch(26.45% 0.01 268.31);
+    border-radius: 10px;
+    transition: 200ms cubic-bezier(0, 0, 0.2, 1);
+
+    &:hover {
+      transform: scale(1.04);
+    }
   }
 </style>
