--- a/src/layouts/ChronicleLayout.astro
+++ b/src/layouts/ChronicleLayout.astro
@@ -12,7 +12,13 @@ const { title, description } = Astro.props
 
 <BaseLayout {title} {description}>
   <div class="chronicles-container">
-    <ContentWrapper><slot /></ContentWrapper>
+    <ContentWrapper>
+      <h1>{title}</h1>
+      <p>{description}</p>
+      <div role="separator"></div>
+
+      <slot />
+    </ContentWrapper>
   </div>
 </BaseLayout>
 
@@ -20,5 +26,12 @@ const { title, description } = Astro.props
   .chronicles-container {
     max-width: 40em;
     margin: auto;
+  }
+
+  div[role='separator'] {
+    height: auto;
+    margin: 2em 0;
+    border: 2px #6b7282 inset;
+    border-style: dashed none none none;
   }
 </style>
