feat(styles): blockquote

--- a/src/components/ContentWrapper.astro
+++ b/src/components/ContentWrapper.astro
@@ -26,5 +26,17 @@
     img {
       padding: 1em 0;
     }
+
+    blockquote {
+      border-inline-start: 3px solid #6b7282;
+      padding: 0.2em 1rem;
+      margin: 2em 0;
+
+      hr {
+        margin: 0.9em 0;
+        border: 1px #6b7282 inset;
+        border-style: inset none none none;
+      }
+    }
   }
 </style>
