--- a/src/components/EntryCard.astro
+++ b/src/components/EntryCard.astro
@@ -22,17 +22,20 @@ const { image, title, description, href } = Astro.props
 
 <style>
   a {
-    display: block;
     color: inherit;
     text-decoration: none;
   }
 
   .entry-card {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
     height: 100%;
     background-color: oklch(20.11% 0.004 286.04);
     box-shadow: 0 0 0 1px oklch(26.45% 0.01 268.31);
     border-radius: 10px;
     transition: 200ms cubic-bezier(0, 0, 0.2, 1);
+    overflow: clip;
 
     &:hover {
       transform: scale(1.04);
