--- a/src/layouts/ChronicleLayout.astro
+++ b/src/layouts/ChronicleLayout.astro
@@ -1,5 +1,5 @@
 ---
-import ContentWrapper from '~/components/ContentWrapper.astro'
+import MarkdownContent from '~/components/MarkdownContent.astro'
 import BaseLayout from './BaseLayout.astro'
 
 export interface Props {
@@ -12,13 +12,13 @@ const { title, description } = Astro.props
 
 <BaseLayout {title} {description}>
   <div class="chronicles-container">
-    <ContentWrapper>
+    <MarkdownContent>
       <h1>{title}</h1>
       <p>{description}</p>
       <div role="separator"></div>
 
       <slot />
-    </ContentWrapper>
+    </MarkdownContent>
   </div>
 </BaseLayout>
 
