feat(style): markdown content

--- a/src/layouts/ChronicleLayout.astro
+++ b/src/layouts/ChronicleLayout.astro
@@ -31,7 +31,7 @@ const { title, description } = Astro.props
   div[role='separator'] {
     height: auto;
     margin: 2em 0;
-    border: 2px #6b7282 inset;
+    border: 2px #f7ecfc inset;
     border-style: dashed none none none;
   }
 </style>
