--- a/src/components/Document/DocumentHead.astro
+++ b/src/components/Document/DocumentHead.astro
@@ -1,11 +1,19 @@
 ---
 import { ViewTransitions } from 'astro:transitions'
+import { Cloudinary } from '@cloudinary/url-gen'
 import '~/styles/global.css'
 
 interface Props {
   title?: string
   description?: string
+  image?: string
 }
+
+const imageURL = new Cloudinary({
+  cloud: { cloudName: import.meta.env.CLOUDINARY_CLOUD_NAME }
+})
+  .image(Astro.props.image ?? 'open_graph_image')
+  .createCloudinaryURL()
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 const { title = 'Patchouli', description } = Astro.props
@@ -40,6 +48,20 @@ const { title = 'Patchouli', description } = Astro.props
     type="font/woff2"
     crossorigin
   />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content={Astro.url} />
+  <meta property="og:title" content={title} />
+  <meta property="og:description" content={description} />
+  <meta property="og:image" content={imageURL} />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content={Astro.url} />
+  <meta property="twitter:title" content={title} />
+  <meta property="twitter:description" content={description} />
+  <meta property="twitter:image" content={imageURL} />
 
   <!-- Scripts -->
   <ViewTransitions />
