--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,6 +1,4 @@
 .markdown-style {
-  --highlight: #bf7af0;
-
   h1 {
     font-size: 2em;
     padding-bottom: 0.5em;
@@ -23,14 +21,10 @@
     list-style-position: inside;
   }
 
-  img {
-    padding: 1em 0;
-  }
-
   blockquote {
     margin: 1rem 0;
     padding: 0.2em 1rem;
-    border-left: 0.25em solid var(--highlight);
+    border-left: 0.25em solid var(--accent-color);
 
     hr {
       margin: 0.9em 0;
@@ -44,7 +38,7 @@
     margin: 0;
     font-size: 85%;
     white-space: break-spaces;
-    background-color: var(--highlight);
+    background-color: var(--accent-color);
     border-radius: 6px;
   }
 
@@ -54,7 +48,7 @@
     display: inline-block;
     position: relative;
     font-weight: 600;
-    color: var(--highlight);
+    color: var(--accent-color);
 
     &::after {
       content: '';
@@ -63,7 +57,7 @@
       top: 50%;
       width: 100%;
       height: 0%;
-      background-color: var(--highlight);
+      background-color: var(--accent-color);
       transition: 150ms cubic-bezier(0, 0, 0.2, 1);
     }
 
