BREAKING CHANGE: remove remedajs

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,4 @@
 ---
-import * as R from 'remeda'
-
 interface Props {
   routes: string[]
 }
@@ -14,17 +12,14 @@ const { routes } = Astro.props
 
     <nav>
       {
-        R.map(routes, route =>
-          R.pipe(
-            `${import.meta.env.BASE_URL}/${route}`,
-
-            href => (
-              <a {href} data-current={Astro.url.pathname.includes(href)}>
-                {route.charAt(0).toUpperCase() + route.slice(1)}
-              </a>
-            )
+        routes.map(route => {
+          const href = `${import.meta.env.BASE_URL}/${route}`
+          return (
+            <a {href} data-current={Astro.url.pathname.includes(href)}>
+              {route.charAt(0).toUpperCase() + route.slice(1)}
+            </a>
           )
-        )
+        })
       }
     </nav>
   </div>
