--- a/src/pages/chronicles/index.astro
+++ b/src/pages/chronicles/index.astro
@@ -10,6 +10,7 @@ const chronicles = collection.sort(
 ---
 
 <BaseLayout>
+  <h1>Chronicles</h1>
   <main class="list-container">
     <ul class="list">
       {
