--- a/src/components/Document/DocumentHead.astro
+++ b/src/components/Document/DocumentHead.astro
@@ -63,6 +63,17 @@ const { title = 'Patchouli', description } = Astro.props
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content={imageURL} />
 
+  <!-- rss feed -->
+  <link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Your Site's Title"
+    href={new URL(
+      `${import.meta.env.BASE_URL}/chronicles/rss.xml`,
+      Astro.site
+    )}
+  />
+
   <!-- Scripts -->
   <ViewTransitions />
 
