--- a/src/components/Articles/ArticleEntry.astro
+++ b/src/components/Articles/ArticleEntry.astro
@@ -1,5 +1,5 @@
 ---
-import CloudinaryImage from './CloudinaryImage.astro'
+import CloudinaryImage from '../CloudinaryImage.astro'
 
 interface Props {
   image?: string
