--- a/src/pages/chronicles/index.astro
+++ b/src/pages/chronicles/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content'
 import BaseLayout from '~/layouts/BaseLayout.astro'
-import EntryCard from '~/components/EntryCard.astro'
+import EntryCard from '~/components/Articles/ArticleEntry.astro'
 
 const collection = await getCollection('chronicles')
 const chronicles = collection.sort(
