--- a/src/components/CloudinaryImage.astro
+++ b/src/components/CloudinaryImage.astro
@@ -1,17 +1,13 @@
 ---
 import { Image } from 'astro:assets'
-import { Cloudinary } from '@cloudinary/url-gen'
+import { cloud } from '~/utils/cloudinary'
 
 interface Props {
   src: string
   alt: string
 }
 
-const cld = new Cloudinary({
-  cloud: { cloudName: import.meta.env.CLOUDINARY_CLOUD_NAME }
-})
-
-const src = cld.image(Astro.props.src).createCloudinaryURL()
+const src = cloud.image(Astro.props.src).createCloudinaryURL()
 ---
 
 <figure>
