--- a/src/components/DocumentHead.astro
+++ b/src/components/DocumentHead.astro
@@ -1,7 +1,7 @@
 ---
 import { ViewTransitions } from 'astro:transitions'
-import { Cloudinary } from '@cloudinary/url-gen'
 import '~/styles/global.css'
+import { getCloudinaryImage } from '~/utils/cloudinary'
 
 interface Props {
   title?: string
@@ -9,14 +9,12 @@ interface Props {
   image?: string
 }
 
-const imageURL = new Cloudinary({
-  cloud: { cloudName: import.meta.env.CLOUDINARY_CLOUD_NAME }
-})
-  .image(Astro.props.image ?? 'open_graph_image')
-  .createCloudinaryURL()
+const { title = 'Patchouli', description } = Astro.props
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const { title = 'Patchouli', description } = Astro.props
+const { src: OpenGraphImage } = await getCloudinaryImage(
+  Astro.props.image ?? 'open_graph_image'
+)
 ---
 
 <head>
@@ -60,16 +58,19 @@ const { title = 'Patchouli', description } = Astro.props
 
   {/* Open Graph */}
   <meta property="og:type" content="website" />
-  <meta property="og:url" content={Astro.url} />
+  <meta property="og:url" content={Astro.site} />
   <meta property="og:title" content={title} />
   <meta property="og:description" content={description} />
-  <meta property="og:image" content={imageURL} />
+  <meta property="og:image" content={new URL(OpenGraphImage, Astro.site)} />
 
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content={Astro.url} />
+  <meta property="twitter:url" content={Astro.site} />
   <meta property="twitter:title" content={title} />
   <meta property="twitter:description" content={description} />
-  <meta property="twitter:image" content={imageURL} />
+  <meta
+    property="twitter:image"
+    content={new URL(OpenGraphImage, Astro.site)}
+  />
 
   {/* Scripts */}
   <ViewTransitions />
